--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<a href="firstblogpost.html">First Blog Post</a>
+<a href="firstblogpost.html">Bliss Redesign</a>
+<a href="blogposttwo.html">XPPen Review</a>
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,14 +10,26 @@
 <style>
 div.ex1 {
 
-  padding: 25px;
+  padding: 50px;
   border: 2px solid #000;
     border-radius: 15px;
   background-color: #fdeff3;
      -moz-border-radius: 10px;
 }
 </style>
-<body style="background-color:lightpink;">
+
+<html>
+<head>
+<style>
+body {
+  background-image: url('pinkcheckers.JPEG');
+}
+</style>
+</head>
+<body>
+
+
+
 
 <body>
 <style>
@@ -31,24 +44,152 @@ img {
 </head>
 <body>
 
+</style>
+
+<html>
+<head>
+<style>
+div.ex2 {
+  background-color: white;
+  width: 1000px;
+   border: 10px solid #DE3163;
+    border-radius: 15px;
+  background-color: #E0BFB8;
+     -moz-border-radius: 10px;
+  padding: 50px;
+  margin: 0px auto;
+
+}
+</style>
+
+<html>
+<head>
+<style>
+div.ex3 {
+  background-color: #A95C68;
+  width: 1000px;
+   border: 10px solid #A95C68;
+    border-radius: 15px;
+  background-color:#A95C68 ;
+     -moz-border-radius: 10px;
+  padding: 25px;
+  margin: 0px auto;
+
+}
+</style>
 
 
 
-<h1 style="text-align:center;">A Behind the Scenes Look at the Artist Behind the Art Pieces! </h1>
+
+<html>
+<head>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+<html>
+<head>
+<style>
+div.left {
+width: 200px;
+    float: left;
+    background-color: #A95C68;
+    padding: 80px;
+ margin-top: 40px;
+ border-radius: 15px;
+  -moz-border-radius: 30px;
 
 
-<p style="text-align:center;"> Hello everybody! My name is Kyara Kaileena Huffman and I have been drawing since I was a young child! For this blog, I wanted to share some of my artworks as well as the inspiration behind the pieces that I draw. I also wanted to share the supplies I use, techniques, inspiration, how long it took to draw something, as well as other fun facts behind the pieces that I draw. As for art supplies, I typically keep it quite simple. My favorite art program to use is Procreate with my ipad 5th generation and apple pencil. I believe that the apps' capabilities to not only draw but to animate as well as its cheap price of 10 dollars make the app the best one to use for digital artists like myself. As for my desktop drawings, I use kritia, a free software that has often been compared to photoshop.As for the subjects that I like to draw the most, I like to draw people, in particular female human characters. I like to draw fan art of shows, games, and movies that I am a fan of. </p>
+
+
+
+}
+
+div.right {
+    margin-left: 250px;
+     margin-top: 40px;
+     margin-bottom: 10px;
+padding: 50px;
+border: 10px solid #DE3163;
+    border-radius: 15px;
+  background-color: #E0BFB8;
+     -moz-border-radius: 10px;
+}
+}
+
+div.clear {
+    clear: both;
+}
+
+</style>
+
+ <div class="left"> A Behind the Scenes Look at the Artist Behind the Art Pieces! </div>
+    <div class="right"> "> Hello everybody! My name is Kyara Kaileena Huffman and I have been drawing since I was a young child! For this blog, I wanted to share some of my artworks as well as the inspiration behind the pieces that I draw. I also wanted to share the supplies I use, techniques, inspiration, how long it took to draw something, as well as other fun facts behind the pieces that I draw. As for art supplies, I typically keep it quite simple. My favorite art program to use is Procreate with my ipad 5th generation and apple pencil. I believe that the apps' capabilities to not only draw but to animate as well as its cheap price of 10 dollars make the app the best one to use for digital artists like myself. As for my desktop drawings, I use kritia, a free software that has often been compared to photoshop.As for the subjects that I like to draw the most, I like to draw people, in particular female human characters. I like to draw fan art of shows, games, and movies that I am a fan of.  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <html>
 <style>
 table, th, td {
-  border:4px solid black;
+  border:1px solid black;
 }
+th, td {
+  padding: 15px;
+}
+
 </style>
 <body>
 
-<h2 style="text-align:center;">My Blog Posting Schedule! </h2>
+<div class="ex3">
+<h1 style="text-align:center;">My Posting Schedule! </h1>
+</div>
+<br>
+
+
+
 <div class="ex1">
 
 <table style="width:100%">
@@ -87,6 +228,16 @@ table, th, td {
 </div>
 <br>
 
+<div class="ex3">
+<h1 style="text-align:center;">Some of My Art! </h1>
+</div>
+<br>
 
-
-<img src="draculaura.JPEG" alt="Draculaura"style=width="500" height="600">>
+<div class="row"> 
+  <div class="column">
+  <img src="Draculaura.JPEG" style="width:100%">
+  <img src="Bliss.JPEG" style="width:100%">
+  </div>
+  <div class="column">
+  <img src="atomevedrawing.JPEG" style="width:200%">
+  <img src="seraidrawing.JPEG" style="width:200%">
