--- a/firstblogpost.html
+++ b/firstblogpost.html
@@ -1,3 +1,5 @@
+<a href="index.html">Index</a>
+<a href="blogposttwo.html">Blog Post 2</a>
 <!DOCTYPE html>
 <html lang="en">
  <meta charset="UTF-8">
@@ -6,7 +8,11 @@
 <head>
 <style>
 body {
-  background-image: url('purplebackground.JPEG');
+  background-image: url('powerpuffbackground.JPEG');
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 100%;
+}
 }
 </style>
 </head>
@@ -48,6 +54,7 @@ div.ex1 {
      -moz-border-radius: 10px;
   padding: 25px;
   margin: 0px auto;
+  margin-top: 40px;
 
 }
 </style>
@@ -80,6 +87,48 @@ img {
 </head>
 <body>
 
+<html>
+<head>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+  border-radius: 5px;
+   -moz-border-radius: 10px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+  border-radius: 5px;
+   -moz-border-radius: 10px;
+
+}
+</style>
+</head>
+<body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -92,7 +141,15 @@ img {
 </div>
 <br>
 
-<img src="bliss.JPEG" alt="powerpuff"style=width="500" height="600">>
+<div class="row"> 
+  <div class="column">
+  <img src="Bliss.JPEG" style="width:100%">
+  <img src="blisseye.png" style="width:100%">
+  </div>
+  <div class="column">
+  <img src="blisshead.png" style="width:100%">
+  <img src="blisslips.png" style="width:100%">
+
 <div class="ex1"> 
 <p> For this piece, I wanted to redesign the character Bliss from Powerpuff Girls. As a half-black woman myself, I was quite disappointed with the lack of positive representation that came from this character, and I felt like her design as well as her personality was a little questionable for the first Powerpuff girl. So for my redesign, I tried to fix some of the elements of her design that were universally disliked, such as her hairstyle, color palette, and weird body proportions. For the hairstyle, I wanted to give her a fro since in her original hairstyle it’s straight but with a weird bump at the bottom. I also changed the hair color to a more muted blue to match her complexion a little bit more. Since she is supposed to be an older power puff girl, I also decided to redesign her outfit. I created a new outfit for her based on both the original Powerpuff Girl outfit as well as several references from other superheroes I grew up with. I gave her a skort which is more practical for fighting, as well as knee-high boots that I felt would make her look way cooler than the Mary Jane flats she was originally rocking. I also gave her some more accessories to complete her look such as a belt, cooler top, and gloves. Lastly, for the background, I drew a simple render of Townsville, the city where the Power Puff girls live, and wrote POWERPUFF GIRLS on the top of the drawing to make it look like a comic book cover. <p>
 </div>
